feat(parent-accounts): allow optional fields with validation when provided
- All basic fields of ParentAccounts are now optional.
- Validation only applies when a field has been entered:
  - First name / Last name → must match allowed characters.
  - Email → must match valid format if present.
  - Phone number → must match regex if present.
  - Birth date → must be in the past if present.
- Gender and relationshipToStudent are now optional (no validation when blank).
- Updated addParentAccounts() to:
  - Run validation before save.
  - Merge existing record when email already exists.
  - Create new record if email is blank or not found.
- Improved helper methods for checking null/blank.